force-app/main/default/objects/Closed_Deal_Insights__c/Closed_Deal_Insights__c.object-meta.xml
<CustomObject>
    <description>This is to hold data for closed opportunities</description>
    <label>Closed Deal Insights</label>
    <nameField>
        <displayFormat>CDI-{000000}</displayFormat>
        <label>Closed Deal Insights Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closed Deal Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>