force-app/main/default/objects/Closed_Deal_Insights__c/fields/AG_Competitor_Won_EMEA__c.field-meta.xml
<CustomField>
    <fullName>AG_Competitor_Won_EMEA__c</fullName>
    <label>AG Competitor Won EMEA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Blue Tree</fullName>
            </value>
            <value>
                <fullName>Crystal Ball</fullName>
            </value>
            <value>
                <fullName>Ctrack</fullName>
            </value>
            <value>
                <fullName>Idem Telematics</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Krone</fullName>
            </value>
            <value>
                <fullName>Microlise</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Orbcomm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Schmitz Cargobull</fullName>
            </value>
            <value>
                <fullName>Teletrac Navman</fullName>
            </value>
            <value>
                <fullName>Transics (Wabco)</fullName>
            </value>
            <value>
                <fullName>Webfleet (Tom Tom)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>