force-app/main/default/objects/Closed_Deal_Insights__c/fields/CS_Incumbent_US__c.field-meta.xml
<CustomField>
    <fullName>CS_Incumbent_US__c</fullName>
    <label>CS Incumbent US</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADT</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Avigilon</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>Blue Iris</fullName>
            </value>
            <value>
                <fullName>Bosch</fullName>
            </value>
            <value>
                <fullName>BriefCam</fullName>
            </value>
            <value>
                <fullName>Cisco Meraki</fullName>
            </value>
            <value>
                <fullName>Dahua</fullName>
            </value>
            <value>
                <fullName>EagleEye</fullName>
            </value>
            <value>
                <fullName>ECamSecure</fullName>
            </value>
            <value>
                <fullName>Exacq</fullName>
            </value>
            <value>
                <fullName>General Analogue</fullName>
            </value>
            <value>
                <fullName>Genetec</fullName>
            </value>
            <value>
                <fullName>Hikvision</fullName>
            </value>
            <value>
                <fullName>Home Camera System</fullName>
            </value>
            <value>
                <fullName>Honeywell</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Lenel</fullName>
            </value>
            <value>
                <fullName>Lorex</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>MultiVista</fullName>
            </value>
            <value>
                <fullName>Nest</fullName>
            </value>
            <value>
                <fullName>No previous vendor</fullName>
            </value>
            <value>
                <fullName>OptiView</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Samsara</fullName>
            </value>
            <value>
                <fullName>SentraCam</fullName>
            </value>
            <value>
                <fullName>Stanley</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>