force-app/main/default/objects/Closed_Deal_Insights__c/fields/EMEA_Competitors__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Competitors__c</fullName>
    <description>EMEA Competitors or providers competed in the deal</description>
    <label>EMEA Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABAX</fullName>
            </value>
            <value>
                <fullName>AddSecure</fullName>
            </value>
            <value>
                <fullName>CalAmp</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>Gurtam</fullName>
            </value>
            <value>
                <fullName>Howen</fullName>
            </value>
            <value>
                <fullName>Lytx</fullName>
            </value>
            <value>
                <fullName>Lightfoot</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>Michelin / Masternaut</fullName>
            </value>
            <value>
                <fullName>Microlise</fullName>
            </value>
            <value>
                <fullName>Radius Telematics</fullName>
            </value>
            <value>
                <fullName>Scania</fullName>
            </value>
            <value>
                <fullName>Sensata Insights</fullName>
            </value>
            <value>
                <fullName>Targa Telematics</fullName>
            </value>
            <value>
                <fullName>Transics</fullName>
            </value>
            <value>
                <fullName>Trimble</fullName>
            </value>
            <value>
                <fullName>Verizon Connect</fullName>
            </value>
            <value>
                <fullName>Webfleet</fullName>
            </value>
            <value>
                <fullName>Quatrix</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>