force-app/main/default/objects/Closed_Deal_Insights__c/fields/VG_Incumbent_EMEA__c.field-meta.xml
<CustomField>
    <fullName>VG_Incumbent_EMEA__c</fullName>
    <label>VG Incumbent EMEA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddSecure (Vehco)</fullName>
            </value>
            <value>
                <fullName>BigChange</fullName>
            </value>
            <value>
                <fullName>Blue Tree</fullName>
            </value>
            <value>
                <fullName>Ctrack</fullName>
            </value>
            <value>
                <fullName>Dynafleet (Volvo)</fullName>
            </value>
            <value>
                <fullName>Eliot (OMP)</fullName>
            </value>
            <value>
                <fullName>Fleetboard (Mercedes)</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>Geotrab</fullName>
                <isActive>false</isActive>
                <label>Geotrab</label>
            </value>
            <value>
                <fullName>Idem Telematics</fullName>
            </value>
            <value>
                <fullName>I don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Mapping Control</fullName>
            </value>
            <value>
                <fullName>Masternaut</fullName>
            </value>
            <value>
                <fullName>Microlise</fullName>
            </value>
            <value>
                <fullName>Mix Telematics</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>Movolytics</fullName>
            </value>
            <value>
                <fullName>Navman</fullName>
                <isActive>false</isActive>
                <label>Navman</label>
            </value>
            <value>
                <fullName>No previous vendor</fullName>
            </value>
            <value>
                <fullName>OCEAN (Orange)</fullName>
            </value>
            <value>
                <fullName>OptiFleet (Renault)</fullName>
            </value>
            <value>
                <fullName>Orbcomm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quartix</fullName>
            </value>
            <value>
                <fullName>RAM tracking</fullName>
            </value>
            <value>
                <fullName>Rio</fullName>
            </value>
            <value>
                <fullName>Samsara</fullName>
            </value>
            <value>
                <fullName>Scaniafleet (Scania)</fullName>
            </value>
            <value>
                <fullName>Spedion</fullName>
            </value>
            <value>
                <fullName>Strata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>